crystal-facet-uml (1.60.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * When pasting a new diagram, navigation view is activated to see the changes
  * When undoing or redoing changes on diagrams,diagramelements or classifiers,
    changes are shown in a suitable view; also maybe features and relationships

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 04 Oct 2024 21:00:00 +0200

crystal-facet-uml (1.59.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * some compiler warnings checked and switched off
  * while moving classifiers, grid lines better show the alignment towards
    other classifiers

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 11 Jul 2024 21:00:00 +0200

crystal-facet-uml (1.58.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * no gtk_file_chooser_set_action in gui_file_use_db_dialog (Closes: #4)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 02 Jun 2024 08:00:00 +0200

crystal-facet-uml (1.58.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in create mode, a click on a feature does not create another feature
  * in create mode, a click on a lifeline selects the classifier
  * in create mode, a click on a classifier name selects the classifier

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 11 May 2024 08:00:00 +0200

crystal-facet-uml (1.58.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * selecting contained classifiers is possible again

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 07 May 2024 06:00:00 +0200

crystal-facet-uml (1.58.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in create mode, the mouse-over element-part is highlighted
  * in edit mode, less accidential selections of the surrounding diagram
  * diagrams provide more automatic line breaks at features, relationships

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 05 May 2024 12:00:00 +0200

crystal-facet-uml (1.57.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * diagrams provide more automatic line breaks in classifier names