@@ -4,6 +4,7 @@ crystal-facet-uml (1.60.0) UNRELEASED; urgency=medium
   * When pasting a new diagram, navigation view is activated to see the changes
   * When undoing or redoing changes on diagrams,diagramelements or classifiers,
     changes are shown in a suitable view; also maybe features and relationships
+  * While moving features, no classifier ordering lines are shown.
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 04 Oct 2024 21:00:00 +0200
 
